# population_analysis

./: .gitignore  .pre-commit-config.yaml  Questions_2022-03-15.md  README.md  pyproject.toml  utils.py
Samanta/: analysis.py  mergers_Z=112e-4.out  mergers_Z=1e-4.out  mergers_Z=63e-4.out  mergers_Z=83e-4.out
jacopo/: column_names.md  eddington_factor_calculation.py  formation_orbit.py  make_all_figures.py  mass_distribution.py  mass_gif.py  matplotlibrc  merger_efficiency.py  my_analysis.py  plots_to_make.md  results.md  select_by_comenv.py
jacopo/data/: mergers_Z=11e-4.out  mergers_Z=2e-2.out  mergers_Z=2e-3.out  mergers_Z=2e-4.out  mergers_Z=36e-4.out  mergers_Z=48e-4.out  mergers_Z=6e-4.out  run_mobse.py
population_analysis/: common_envelope.py  input_manipulation.py  plotting.py  utils.py
